# ddd_python

./: .dockerignore  .gitignore  Dockerfile  config.py  conftest.py  e2e_testing_walkthrough.md  pyproject.toml  testing_pyramid.md
adapters/: orm.py  repository.py
domain/: model.py
entrypoints/: flask_app.py
k8s/: deployment.yaml  postgres.yaml  service.yaml
scripts/: create_tables.py
service_layer/: services.py
tests/: test_allocate.py  test_batches.py  test_repository.py  test_services.py
tests/e2e/: test_api.py
tests/integration/: test_orm.py
tests/unit/: test_batches.py  test_services.py
