[project]
name = "practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker==1.9.0",
    "click==8.3.2",
    "flask==3.1.3",
    "greenlet==3.4.0",
    "iniconfig==2.3.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "packaging==26.1",
    "pluggy==1.6.0",
    "psycopg2-binary>=2.9.11",
    "pyclean==3.6.0",
    "pygments==2.20.0",
    "pytest==9.0.3",
    "requests>=2.33.1",
    "sqlalchemy==1.4.54",
    "werkzeug==3.1.8",
]
